@@ -29,7 +29,6 @@ package org.niis.xroad.cs.admin.core.converter;
 import ee.ria.xroad.common.util.CertUtils;
 
 import lombok.RequiredArgsConstructor;
-import lombok.SneakyThrows;
 import org.niis.xroad.cs.admin.api.dto.CertificationService;
 import org.niis.xroad.cs.admin.api.dto.CertificationServiceListItem;
 import org.niis.xroad.cs.admin.core.entity.ApprovedCaEntity;
@@ -39,16 +38,12 @@ import java.security.cert.X509Certificate;
 import java.util.Collection;
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 @Component
 @RequiredArgsConstructor
 public class ApprovedCaConverter {
     private final OcspResponderConverter ocspResponderConverter;
     private final CaInfoConverter caInfoConverter;
 
-    @SneakyThrows
-    @SuppressWarnings("checkstyle:SneakyThrowsCheck") //TODO XRDDEV-2390 will be refactored in the future
     public CertificationService convert(ApprovedCaEntity entity) {
         final X509Certificate[] certificates = CertUtils.readCertificateChain(entity.getCaInfo().getCert());
         final X509Certificate certificate = certificates[0];
@@ -65,10 +60,10 @@ public class ApprovedCaConverter {
                 .setCertificate(entity.getCaInfo().getCert())
                 .setOcspResponders(entity.getCaInfo().getOcspInfos().stream()
                         .map(ocspResponderConverter::toModel)
-                        .collect(toList()))
+                        .toList())
                 .setIntermediateCas(entity.getIntermediateCaInfos().stream()
                         .map(caInfoConverter::toCertificateAuthority)
-                        .collect(toList()))
+                        .toList())
                 .setCreatedAt(entity.getCreatedAt())
                 .setUpdatedAt(entity.getUpdatedAt())
                 .setAcmeServerDirectoryUrl(entity.getAcmeServerDirectoryUrl())
@@ -80,7 +75,7 @@ public class ApprovedCaConverter {
     public List<CertificationServiceListItem> toListItems(Collection<ApprovedCaEntity> entities) {
         return entities.stream()
                 .map(this::toListItem)
-                .collect(toList());
+                .toList();
     }
 
     private CertificationServiceListItem toListItem(final ApprovedCaEntity approvedCa) {
